exper_reports/v2/retriever_eval_report.md
# 检索器离线评测报告（自动生成）

## 实验设置

- 样本数 **N** = 99
- **backend** = v2，**intent_llm** = False，`k_per_retriever` = 5, `k_final` = 5
- v2 不含 img_vec 路，与 v1 四路混合检索指标仅作参考对比
- `with_relations` = false

## 准确性（总体）


| 指标     | 值      |
| ------ | ------ |
| HR@3   | 0.3333 |
| HR@5   | 0.3636 |
| MRR    | 0.3067 |
| NDCG@3 | 0.3083 |
| NDCG@5 | 0.3209 |


## 分层：query_type


| query_type  | N   | HR@3   | HR@5   | MRR    | NDCG@3 | NDCG@5 |
| ----------- | --- | ------ | ------ | ------ | ------ | ------ |
| 复合问题        | 11  | 0.6364 | 0.6364 | 0.5455 | 0.5693 | 0.5693 |
| 文搜索图        | 10  | 0.2000 | 0.2000 | 0.2000 | 0.2000 | 0.2000 |
| 术语名词查询      | 33  | 0.4545 | 0.5455 | 0.4354 | 0.4242 | 0.4621 |
| 查找原文/文言文翻译  | 15  | 0.2667 | 0.2667 | 0.2333 | 0.2421 | 0.2421 |
| 查找指定书籍/作者内容 | 23  | 0.0435 | 0.0435 | 0.0435 | 0.0435 | 0.0435 |
| 生僻字查询       | 7   | 0.5714 | 0.5714 | 0.5000 | 0.5187 | 0.5187 |


## 分层：content_type


| content_type | N   | HR@3   | HR@5   | MRR    | NDCG@3 | NDCG@5 |
| ------------ | --- | ------ | ------ | ------ | ------ | ------ |
| image        | 21  | 0.0000 | 0.0000 | 0.0000 | 0.0000 | 0.0000 |
| 其他文本         | 9   | 0.3333 | 0.3333 | 0.3333 | 0.3333 | 0.3333 |
| 原文           | 21  | 0.1429 | 0.2381 | 0.1429 | 0.1253 | 0.1663 |
| 注释           | 12  | 0.5000 | 0.5000 | 0.5000 | 0.5000 | 0.5000 |
| 解读           | 24  | 0.7083 | 0.7083 | 0.5903 | 0.6205 | 0.6205 |
| 译文           | 12  | 0.3333 | 0.4167 | 0.3500 | 0.3333 | 0.3656 |


## 检索延迟（毫秒）


| mean   | P50    | P95     | min    | max      | 次数  |
| ------ | ------ | ------- | ------ | -------- | --- |
| 819.74 | 577.62 | 1022.61 | 504.24 | 16347.79 | 99  |


## 未命中（GT 不在融合前 5 条）

- 条数：**63** / 99


| #   | query（节选）             | evidence_chunk_id                      |
| --- | --------------------- | -------------------------------------- |
| 1   | 查找《营造法式》解读中殿阁铺作的构造    | `017d8b63-1f13-4b15-82e2-4f4b68663430` |
| 2   | 梁思成注释营造法式卷二总释下讲了什么？   | `08017c57-aa2c-4383-8b7b-692dbbd0d968` |
| 3   | 文中引用老子道德经哪句话解释水德？     | `08017c57-aa2c-4383-8b7b-692dbbd0d968` |
| 4   | 文本中音斛的生僻字释义为何？        | `0ca23ddc-24f2-4924-a9e4-307e0314f8f5` |
| 5   | 瓦在营造法式中有哪两个名称？        | `0ca23ddc-24f2-4924-a9e4-307e0314f8f5` |
| 6   | 卷十五窑作制度中关于瓦的原文解释是什么？  | `0ca23ddc-24f2-4924-a9e4-307e0314f8f5` |
| 7   | 王贵祥译注的营造法式包含壁藏帐身内容吗   | `0e762c27-faa1-41fc-8104-e272a1019fd6` |
| 8   | 帐身格子所施钿面版榥和格榥数量有什么区别？ | `0e762c27-faa1-41fc-8104-e272a1019fd6` |


